--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,14 @@
             });
         }
     </script>
-    
+    <!-- <script>
+        window.ChatWidgetConfig = {
+          apiKey: "RE-PAFw_W4hSVJCE2oDsvjxd4insR939"
+        };
+      </script>
+      
+      <script src="https://aadithya2112.github.io/chatterly/chat-widget.iife.js"></script> -->
+
     {% block scripts %}{% endblock %}
 </body>
 </html>
